--- a/res/haven-map.ui
+++ b/res/haven-map.ui
@@ -2,6 +2,35 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
+  <object class="GtkAboutDialog" id="about">
+    <property name="can_focus">False</property>
+    <property name="type_hint">dialog</property>
+    <property name="program_name">Haven &amp; Hearth Mapper</property>
+    <property name="authors">Jakub Łukomski &lt;dev@tenku.eu&gt;</property>
+    <property name="logo_icon_name">image-missing</property>
+    <property name="license_type">gpl-3-0</property>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="about-box">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="aboutdialog-action_area1">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkActionGroup" id="actions">
     <child>
       <object class="GtkAction" id="open">
@@ -71,7 +100,7 @@
       <object class="GtkToggleAction" id="markers-toggle">
         <property name="label" translatable="yes">Display markers</property>
         <property name="short_label" translatable="yes">Display markers</property>
-        <property name="stock_id">gtk-color-picker</property>
+        <property name="icon_name">mark-location-symbolic</property>
         <property name="sensitive">False</property>
       </object>
     </child>
@@ -89,7 +118,7 @@
       <object class="GtkToggleAction" id="grid-toggle">
         <property name="label" translatable="yes">Display grid</property>
         <property name="short_label" translatable="yes">Display grid</property>
-        <property name="stock_id">gtk-cut</property>
+        <property name="icon_name">widget-gtk-grid</property>
         <signal name="toggled" handler="toggle_grid" swapped="no"/>
       </object>
     </child>
@@ -142,6 +171,8 @@
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkMenuBar" id="menubar1">
+            <property name="name">a</property>
+            <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
               <object class="GtkMenuItem" id="menuitem1">
@@ -273,7 +304,6 @@
                         <property name="related_action">labels-toggle</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">checkmenuitem1</property>
                         <property name="use_underline">True</property>
                       </object>
                     </child>
@@ -283,7 +313,6 @@
                         <property name="related_action">markers-toggle</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">menuitem5</property>
                         <property name="use_underline">True</property>
                       </object>
                     </child>
@@ -293,8 +322,30 @@
                         <property name="related_action">grid-toggle</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">checkmenuitem2</property>
                         <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkMenuItem" id="tools">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">_Tools</property>
+                <property name="use_underline">True</property>
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu5">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkImageMenuItem" id="menuitem6">
+                        <property name="use_action_appearance">True</property>
+                        <property name="related_action">merge</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_stock">True</property>
                       </object>
                     </child>
                   </object>
