--- a/res/haven-map.ui
+++ b/res/haven-map.ui
@@ -7,7 +7,7 @@
     <property name="type_hint">dialog</property>
     <property name="program_name">Haven &amp; Hearth Mapper</property>
     <property name="authors">Jakub Łukomski &lt;dev@tenku.eu&gt;</property>
-    <property name="logo_icon_name">image-missing</property>
+    <property name="logo">map.png</property>
     <property name="license_type">gpl-3-0</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="about-box">
@@ -163,6 +163,7 @@
   </object>
   <object class="GtkWindow" id="main-window">
     <property name="can_focus">False</property>
+    <property name="icon">map.png</property>
     <signal name="destroy" handler="quit" swapped="no"/>
     <child>
       <object class="GtkBox" id="box1">
@@ -345,6 +346,7 @@
                         <property name="related_action">merge</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
